// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageForm component agentTyping shows typing indicator 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="poke"
  >
    <div
      className="pokeBody"
    >
      <span
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Agent is typing
      </span>
      <TypingIndicator
        xScale={0.75}
        yScale={0.5}
      />
    </div>
  </div>
  <div
    className="messageArea"
  >
    <EmojiTextArea
      disabled={false}
      maxLength={1024}
      name="message"
      onChange={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fa fa-smile-o"
        title="Minimize window"
      />
    </button>
    <button
      className="messageFormBtn sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
          "fontSize": 16,
          "textTransform": "uppercase",
        }
      }
    >
      Send
    </button>
    <EmojiPicker
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;

exports[`MessageForm component rendering renders 1`] = `
<div
  className="MessageForm"
  style={
    Object {
      "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.2)",
      "zIndex": 1,
    }
  }
>
  <div
    className="messageArea"
  >
    <EmojiTextArea
      disabled={false}
      maxLength={1024}
      name="message"
      onChange={[Function]}
      onReturn={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
        }
      }
    />
    <button
      className="messageFormBtn emojiBtn"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="fa fa-smile-o"
        title="Minimize window"
      />
    </button>
    <button
      className="messageFormBtn sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#68b588",
          "fontFamily": "Source Sans Pro",
          "fontSize": 16,
          "textTransform": "uppercase",
        }
      }
    >
      Send
    </button>
    <EmojiPicker
      addEmoji={[Function]}
      emojiFilter={[Function]}
      ignoreOutsideClickOnSelectors={
        Array [
          ".emojiBtn",
        ]
      }
      onOutsideClick={[Function]}
      visible={false}
    />
  </div>
</div>
`;
